--- a/blog/templates/blog/post_archive.html
+++ b/blog/templates/blog/post_archive.html
@@ -1,32 +1,29 @@
-<!DOCTYPE html>
-<html>
-	<head>
-		<title>django blog archive</title>
-	</head>
-	<body>
-		<h1>Post Archives until {% now "N d, Y" %}</h1>
+{% extends 'base.html' %}
 
+{% block title %}Blog post_archive{% endblock %}
+
+{% block content %}
+<div id="content">
+	<h1>Post Archives until {% now "N d, Y" %}</h1>
+
+	<ul>
+		{% for date in date_list %}
+		<li style="display: inline;">
+			<a href="{% url 'blog:post_year_archive' date|date:'Y' %}">Year-{{ date|date:"Y" }}</a>
+		</li>
+		{% endfor %}
+	</ul>
+	<br/>
+
+	<div>
 		<ul>
-			{% for date in date_list %}
-			<li style="display: inline;">
-				<a href="{% url 'blog:post_year_archive' date|date:'Y' %}">Year-{{ date|date:"Y" }}</a>
+			{% for post in object_list %}
+			<li>{{ post.modify_date|date:"Y-m-d" }}&nbsp;&nbsp;&nbsp;
+				<a href="{{ post.get_absolute_url }}"><strong>{{ post.title }}</strong></a>
 			</li>
 			{% endfor %}
 		</ul>
-		<br/>
-
-		<div>
-			<ul>
-				{% for post in object_list %}
-				<li>{{ post.modify_date|date:"Y-m-d" }}&nbsp;&nbsp;&nbsp;
-					<a href="{{ post.get_absolute_url }}"><strong>{{ post.title }}</strong></a>
-				</li>
-				{% endfor %}
-			</ul>
-		</div>
-		<p><a href="{% url 'blog:index' %}">Go to blog list</a></p>
-	</body>
-</html>
-
-
-				
+	</div>
+	<p><a href="{% url 'blog:index' %}">Go to blog list</a></p>
+</div>
+{% endblock %}
