--- a/blog/templates/blog/post_archive_day.html
+++ b/blog/templates/blog/post_archive_day.html
@@ -1,18 +1,18 @@
-<!DOCTYPE html>
-<html>
-	<head>
-		<title>django blog archive day</title>
-	</head>
-	<body>
-		<h1>Post Archives for {{ day|date:"N d, Y" }}</h1>
-		<div>
-			<ul>
-				{% for post in object_list %}
-				<li>{{ post.modify_date|date:"Y-m-d" }}&nbsp;&nbsp;&nbsp;
-					<a href="{{ post.get_absolute_url }}"><strong>{{ post.title }}</strong></a>
-				</li>
-				{% endfor %}
-			</ul>
-		</div>
-	</body>
-</html>
+{% extends 'base.html' %}
+
+{% block title %}Blog post_archive_day{% endblock %}
+
+{% block content %}
+<div id="content">
+	<h1>Post Archives for {{ day|date:"N d, Y" }}</h1>
+	<div>
+		<ul>
+			{% for post in object_list %}
+			<li>{{ post.modify_date|date:"Y-m-d" }}&nbsp;&nbsp;&nbsp;
+				<a href="{{ post.get_absolute_url }}"><strong>{{ post.title }}</strong></a>
+			</li>
+			{% endfor %}
+		</ul>
+	</div>
+</div>
+{% endblock %}
