--- a/blog/templates/blog/post_archive_year.html
+++ b/blog/templates/blog/post_archive_year.html
@@ -1,28 +1,30 @@
-<!DOCTYPE html>
-<html>
-	<head>
-		<title>django blog archive Year</title>
-	</head>
-	<body>
-		<h1>Post Archives for {{ year|date:"Y" }}</h1>
+{% extends 'base.html' %}
 
+{% block title %}Blog Post_archive_year{% endblock %}
+
+{% block content %}
+
+<div id="content">
+
+	<h1>Post Archives for {{ year|date:"Y" }}</h1>
+
+	<ul>
+		{% for date in date_list %}
+		<li style="display: inline;">
+			<a href="{% url 'blog:post_month_archive' year|date:'Y' date|date:'b' %}">{{ date|date:"F" }}</a>
+		</li>
+		{% endfor %}
+	</ul>
+	<br/>
+
+	<div>
 		<ul>
-			{% for date in date_list %}
-			<li style="display: inline;">
-				<a href="{% url 'blog:post_month_archive' year|date:'Y' date|date:'b' %}">{{ date|date:"F" }}</a>
+			{% for post in object_list %}
+			<li>{{ post.modify_date|date:"Y-m-d" }}&nbsp;&nbsp;&nbsp;
+				<a href="{{ post.get_absolute_url }}"><strong>{{ post.title }}</strong></a>
 			</li>
 			{% endfor %}
 		</ul>
-		<br/>
-
-		<div>
-			<ul>
-				{% for post in object_list %}
-				<li>{{ post.modify_date|date:"Y-m-d" }}&nbsp;&nbsp;&nbsp;
-					<a href="{{ post.get_absolute_url }}"><strong>{{ post.title }}</strong></a>
-				</li>
-				{% endfor %}
-			</ul>
-		</div>
-	</body>
-</html>
+	</div>
+</div>
+{% endblock %}
