--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -1,29 +1,30 @@
-<!DOCTYPE html>
-<html>
-	<head>
-		<title>my blog post</title>
-	</head>
-	<body>
-		<h2>{{ object.title }}</h2>
+{% extends 'base.html' %}
 
-		<p class="other_posts">
-		{% if object.get_previous_by_modify_date %}
-		<a href="{{ object.get_previous_post.get_absolute_url }}" title="View previous post"> &laquo;--{{ object.get_previous_post }}</a>
-		{% endif %}
-		{% if object.get_next_by_modify_date %}
-		<a href="{{ object.get_next_post.get_absolute_url }}" title="View next post"> {{ object.get_next_post }}--&raquo;</a>
-		{% endif %}
-		</p>
+{% block title %}Blog Post_detail{% endblock %}
 
-		<p class="date">
-		{{ object.modify_date|date:"j F Y" }}
-		</p>
+{% block content %}
 
-		<br/>
-		<div class="body">
-		{{ object.content|linebreaks }}
-		</div>
-		<br/>
-		<p><a href="{% url 'blog:post_list' %}">get back to list</a></p>
-	</body>
-</html>
+<div id="content">
+	<h2>{{ object.title }}</h2>
+
+	<p class="other_posts">
+	{% if object.get_previous_by_modify_date %}
+	<a href="{{ object.get_previous_post.get_absolute_url }}" title="View previous post"> &laquo;--{{ object.get_previous_post }}</a>
+	{% endif %}
+	{% if object.get_next_by_modify_date %}
+	<a href="{{ object.get_next_post.get_absolute_url }}" title="View next post"> {{ object.get_next_post }}--&raquo;</a>
+	{% endif %}
+	</p>
+
+	<p class="date">
+	{{ object.modify_date|date:"j F Y" }}
+	</p>
+
+	<br/>
+	<div class="body">
+	{{ object.content|linebreaks }}
+	</div>
+	<br/>
+	<p><a href="{% url 'blog:post_list' %}">get back to list</a></p>
+</div>
+{% endblock %}
