--- a/bookmark/templates/bookmark/bookmark_detail.html
+++ b/bookmark/templates/bookmark/bookmark_detail.html
@@ -1,15 +1,13 @@
-<!DOCTYPE html>
-<html>
-	<head>
-		<title>Django Bookmark Deatil</title>
-	</head>
-	<body>
-		<div id="content">
-			<h1>{{ object.title }}</h1>
+{% extends 'base.html' %}
 
-			<ul>
-				<li>URL: <a href="{{ object.url }}">{{ object.url }}</a></li>
-			</ul>
-		</div>
-	</body>
-</html>
+{% block title %}Bookmark Detail{% endblock %}
+
+{% block content %}
+<div id="content">
+	<h1>{{ object.title }}</h1>
+
+	<ul>
+		<li>URL: <a href="{{ object.url }}">{{ object.url }}</a></li>
+	</ul>
+</div>
+{% endblock %}
