--- a/templates/home.html
+++ b/templates/home.html
@@ -1,15 +1,47 @@
 {% extends "base.html" %}
 
-{% block title %}home.html test{% endblock %}
+{% block title %}home{% endblock %}
+
+{% load staticfiles %}
+{% block extrastyle %}{% static "css/home.css" %}{% endblock %}
 
 {% block content %}
-<div id="content">
-	this is CONTENT area
+<div id="content_home">
+	<div id="homeimg">
+		<a href="/"><img class="home_" src="{% static 'img/GSW.jpg' %}"></a>
+		<h4 class="home_">This is Django powered web site.</h4>
+	</div>
+
+	<hr class="home_">
+
+	<h2>Select Application</h2>
+
+	<table id="applist">
+		<tr>
+			<td><b><i><a href="{% url 'bookmark:index' %}">Bookmark</a></i></b></td>
+			<td>You can write your own post and share to others. Donec id elit non miporta gravida at eget metus. Fusce dabipus, tellus ac cursus commodo</td>
+			<td class="Edit"><i><a href="#">Add</a></i></td>
+			<td class="Edit"><i><a href="#">Change</a></i></td>
+		</tr>
+		<tr>
+			<td><b><i><a href="{% url 'blog:index' %}">Blog</a></i></b></td>
+			<td>You can write your own post and share to others. Donec id elit non miporta gravida at eget metus. Fusce dabipus, tellus ac cursus commodo</td>
+			<td class="Edit"><i><a href="#">Add</a></i></td>
+			<td class="Edit"><i><a href="#">Change</a></i></td>
+		</tr>
+
+		<tr>
+			<td><b><i><a href="#">Photo</a></i></b></td>
+			<td>You can write your own post and share to others. Donec id elit non miporta gravida at eget metus. Fusce dabipus, tellus ac cursus commodo</td>
+			<td class="Edit"><i><a href="#">Add</a></i></td>
+			<td class="Edit"><i><a href="#">Change</a></i></td>
+		</tr>
+	</table>
 </div>
 {% endblock content %}
 
 {% block footer %}
 <div id="footer">
-	This is FOOTER area
+	&copy; YJH 2019
 </div>
 {% endblock footer %}
