add tag function using taggit library. but still continue..

--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -24,6 +24,21 @@
 	<div class="body">
 	{{ object.content|linebreaks }}
 	</div>
+
+	<div>
+		<b>TAGS: </b>
+		<ul>
+			{% load taggit_extras %}
+			{% get_taglist as tags %}
+			{% for tag in tags %}
+			<li><a href="{% url 'blog:tagged_object_list' tag.name %}">{{ tag.name }}</a></li>
+			{% empty %}
+			<li>No Tags</li>
+			{% endfor %}
+		</ul>
+		<a href="{% url 'blog:tag_cloud' %}"><i>[ TagCloud ]</i></a>
+	</div>
+
 	<br/>
 	<p><a href="{% url 'blog:post_list' %}">get back to list</a></p>
 </div>
