--- a/blog/templates/tagging/tagging_cloud.html
+++ b/blog/templates/tagging/tagging_cloud.html
@@ -13,7 +13,7 @@
 	<div class="tag-cloud">
 		{% load tagging_tags %}
 		{% tag_cloud_for_model blog.Post as tags with steps=6 min_count=1 distribution=log %}
-		{% for ta in tags %}
+		{% for tag in tags %}
 		<span class="tag-{{tag.font_size}}">
 			<a href="{% url 'blog:tagged_object_list' tag.name %}">{{tag.name}} ({{tag.font_size}})</a>
 		</span>
