--- a/photo/templates/photo/album_list.html
+++ b/photo/templates/photo/album_list.html
@@ -8,4 +8,25 @@
 {% block content %}
 <div id="content">
 	{% for item in object_list %}
+
+	<div class="clear_float">
+		<h2><a href="{% url 'photo:album_detail' item.id %}">{{ item.name }}</a></h2>
+		&emsp;<b><i>{{ item.description }}</i></b>
+	</div>
+
+	<hr/>
+
+	<div class="album_list">
+		{% for photo in item.photo_set.all|slice:":5" %}
+		<div class="album-list-photo">
+			<a href="{{ photo.get_absolute_url }}">
+				<img class="thumbnail" src="{{ photo.image.thumb_url }}">
+			</a>
+		</div>
+		{% endfor %}
+	</div>
+
+	{% endfor %}
+</div>
+{% endblock %}
 		
