add style sheet

--- a/photo/templates/photo/album_detail.html
+++ b/photo/templates/photo/album_detail.html
@@ -8,7 +8,7 @@
 {% block content %}
 <div id="content">
 	
-	<h2>{{ object.name }}</h2>
+	<h2 id="album_detail_h2">{{ object.name }}</h2>
 	&emsp;<b><i>{{ object.description }}</i></b>
 
 	<hr/>
