--- a/photo/templates/photo/album_list.html
+++ b/photo/templates/photo/album_list.html
@@ -10,7 +10,7 @@
 	{% for item in object_list %}
 
 	<div class="clear_float">
-		<h2><a href="{% url 'photo:album_detail' item.id %}">{{ item.name }}</a></h2>
+		<h2 id="album_detail_h2"><a href="{% url 'photo:album_detail' item.id %}">{{ item.name }}</a></h2>
 		&emsp;<b><i>{{ item.description }}</i></b>
 	</div>
 
