--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -20,7 +20,7 @@
 		<fieldset class="aligned">
 
 			<div class="form-row">
-				{{ form.username.label_tag }} {{ form.usernmae }}
+				{{ form.username.label_tag }} {{ form.username }}
 			</div>
 
 			<div class="form-row">
