--- a/templates/registration/register.html
+++ b/templates/registration/register.html
@@ -13,6 +13,7 @@
 	<form action="." method="post">{% csrf_token %}
 		{% if form.errors %}
 		<p class="errornote">Wrong! Please corret the error(s) below.</p>
+		<p>{{ form.errors }}</p>
 		{% endif %}
 
 		<p>Please enter your username etc.</p>
@@ -20,7 +21,7 @@
 		<fieldset class="aligned">
 
 			<div class="form-row">
-				{{ form.username.label_tag }} {{ form.usernmae }}
+				{{ form.username.label_tag }} {{ form.username }}
 			</div>
 
 			<div class="form-row">
