--- a/static/css/base.css
+++ b/static/css/base.css
@@ -122,5 +122,7 @@ td, th {
 	font-family: "Lucida Grande", Verdana, Arial, sans-serif;
 }
 
-
+table.change-list, table.change-list th, table.chagne-list td {
+	border: 1px solid #ccc;
+}
 	
